Use bg-color instead of hardcoded value for codeblocks

--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -71,7 +71,7 @@ img {
 
 // Codeblocks
 pre code, pre.xdebug-var-dump{
-  background: #fafafa;
+  background: $bg-color;
   display: block;
   padding: 1rem !important;
   line-height: 1.5;
@@ -90,7 +90,7 @@ pre[class*="language-"] {
 
 pre {
   code:not(.hljs):not([class*="language-"]) {
-    background: #f8f8f8;
+    background: $bg-color;
   }
 }
 
