Apply gray color in css, not the html templates

--- a/scss/theme/_onepage.scss
+++ b/scss/theme/_onepage.scss
@@ -115,6 +115,7 @@
 .modular-text {
   padding-top: 4rem;
   padding-bottom: 4rem;
+  background-color: $bg-color;
 
   .columns.left {
     flex-direction: row-reverse;
