--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -14,4 +14,5 @@ body.sticky-footer {
   color: #acb3c2;
   padding: 1rem $horiz-padding 0;
   text-align: center;
+  background-color: $bg-color;
 }
