--- a/templates/forms/fields/checkbox/checkbox.html.twig
+++ b/templates/forms/fields/checkbox/checkbox.html.twig
@@ -1,7 +1,5 @@
+{% set show_label = false %}
 {% extends "forms/field.html.twig" %}
-
-{% block label %}
-{% endblock %}
 
 {% block input %}
     {% set id = field.id|default(field.name)|hyphenize %}
