Add breadcrumbs to all pages, add messages also to blog items

--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -1,10 +1,9 @@
 {% extends 'partials/base.html.twig' %}
 {% set blog_image = page.media.images[page.header.hero_image] ?: page.media.images|first %}
 {% set collection = page.collection() %}
-{% set blog = page.find(header_var('blog_url')|defined(theme_var('blog-page'))) %}
-{% set show_breadcrumbs = header_var('show_breadcrumbs', [page, blog])|defined(true) %}
-{% set show_sidebar = header_var('show_sidebar', [page, blog])|defined(true)  %}
-{% set show_pagination = header_var('show_pagination', [page, blog])|defined(true) %}
+{% set show_breadcrumbs = theme_var('show_breadcrumbs', true) %}
+{% set show_sidebar = theme_var('show_sidebar', true) %}
+{% set show_pagination = theme_var('show_pagination', true) %}
 
 {% block stylesheets %}
     {% do assets.addCss('theme://css/bricklayer.css') %}
@@ -17,40 +16,27 @@
     {% do assets.add('theme://js/scopedQuerySelectorShim.min.js') %}
 {% endblock %}
 
-
 {% block hero %}
     {% include 'partials/hero.html.twig' with {id: 'blog-hero', content: page.content, hero_image: blog_image} %}
 {% endblock %}
 
+{# We must override the body here in order to inject the additional class blog-listing #}
 {% block body %}
     <section id="body-wrapper" class="section blog-listing">
         <section class="container {{ grid_size }}">
 
-        {% if show_breadcrumbs and config.plugins.breadcrumbs.enabled %}
-            {% include 'partials/breadcrumbs.html.twig' %}
-        {% endif %}
+        {% block messages %}
+            {% include 'partials/messages.html.twig' ignore missing %}
+        {% endblock %}
 
-        {% embed 'partials/layout.html.twig' with {blog: page} %}
-            {% block item %}
+        {% block breadcrumbs %}
+            {% if show_breadcrumbs and config.plugins.breadcrumbs.enabled %}
+                {% include 'partials/breadcrumbs.html.twig' %}
+            {% endif %}
+        {% endblock %}
 
-                <div class="bricklayer">
-                {% for child in collection %}
-                    {% include 'partials/blog-list-item.html.twig' with {blog: page, page: child} %}
-                {% endfor %}
-                </div>
+        {{ block('content_surround') }}
 
-                {% if show_pagination and config.plugins.pagination.enabled and collection.params.pagination %}
-                    <div id="listing-footer">
-                        {% include 'partials/pagination.html.twig' with {base_url: page.url, pagination: collection.params.pagination} %}
-                    </div>
-                {% endif %}
-
-            {% endblock %}
-
-            {% block sidebar %}
-                {% include 'partials/sidebar.html.twig' %}
-            {% endblock %}
-        {% endembed %}
         </section>
     </section>
     <script>
@@ -59,5 +45,26 @@
     </script>
 {% endblock %}
 
+{% block content %}
+    {% embed 'partials/layout.html.twig' with {blog: page} %}
+        {% block item %}
 
+            <div class="bricklayer">
+            {% for child in collection %}
+                {% include 'partials/blog-list-item.html.twig' with {blog: page, page: child} %}
+            {% endfor %}
+            </div>
 
+            {% if show_pagination and config.plugins.pagination.enabled and collection.params.pagination %}
+                <div id="listing-footer">
+                    {% include 'partials/pagination.html.twig' with {base_url: page.url, pagination: collection.params.pagination} %}
+                </div>
+            {% endif %}
+
+        {% endblock %}
+
+        {% block sidebar %}
+            {% include 'partials/sidebar.html.twig' %}
+        {% endblock %}
+    {% endembed %}
+{% endblock %}
