--- a/scss/theme.scss
+++ b/scss/theme.scss
@@ -10,6 +10,7 @@
 @import 'theme/forms';
 @import 'theme/mobile';
 @import 'theme/animation';
+@import 'theme/breadcrumbs';
 
 @import 'theme/header';
 @import 'theme/footer';
@@ -18,4 +19,3 @@
 // Extra Skeleton Styling
 @import 'theme/blog';
 @import 'theme/onepage';
-
