Replace breadcrumb color with variable

--- a/scss/theme/_breadcrumbs.scss
+++ b/scss/theme/_breadcrumbs.scss
@@ -11,7 +11,7 @@
       padding-right: 0.5rem;
       padding-left: 0.5rem;
 
-      color: #e7e9ed;
+      color: $gray-color-light;
       content: "/";
     }
   }
