Added new footer options

--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -24,8 +24,8 @@ body.sticky-footer {
     ul {
       &.footer-list {
         > li {
-          margin: 0;
           display: inline-block;
+          margin: 0 0.1rem;
         }
       }
     }
