--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,5 +1,29 @@
 <section id="footer" class="section">
     <section class="container {{ grid_size }}">
-        <p><a href="http://getgrav.org">Grav</a> was <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
+      {# Try to load a custom footer #}
+      {% set footer_content = page.find('/modules/footer').content %}
+      {% if footer_content %}
+        {{ footer_content|raw }}
+      {% else %}
+
+        {# Try to load pages with the 'footer' frontmatter attribute set to true #}
+        {% set footer_pages = pages.collection({'items': '@self.descendants'})|filter(x => x.header.footer == true) %}
+        {% if footer_pages|length %}
+          <ul class="footer-list">
+            {% for p in footer_pages %}
+              {% set active_page = (p.active) ? 'active' : '' %}
+              <li>
+                <a href="{{ p.url }}" class="{{ active_page }}">
+                  {{ p.menu }}
+                </a>
+              </li>
+            {% endfor %}
+          </ul>
+
+        {# Use default footer #}
+        {% else %}
+          <p><a href="http://getgrav.org">Grav</a> was <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
+        {% endif %}
+      {% endif %}
     </section>
 </section>
