--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -24,7 +24,11 @@
     {% if theme_var('spectre.icons') %}{% do assets.addCss('theme://css-compiled/spectre-icons'~compress) %}{% endif %}
     {% do assets.addCss('theme://css-compiled/theme'~compress) %}
     {% do assets.addCss('theme://css/custom.css') %}
-    {% do assets.addCss('theme://css/line-awesome.min.css') %}
+
+    {# Add lineawesome 1.3.0 and font-awesome-line-awesome compatibility patches along with v4 shims #}
+    {% do assets.addCss('theme://css-compiled/line-awesome'~compress) %}
+    {% do assets.addCss('theme://css-compiled/font-awesome-line-awesome'~compress) %}
+    {% do assets.addCss('theme://css/fontawesome/v4-shims'~compress) %}
 {% endblock %}
 
 {% block javascripts %}
