--- a/scss/font-awesome-line-awesome/_variables.scss
+++ b/scss/font-awesome-line-awesome/_variables.scss
@@ -17,6 +17,7 @@ $la-font-name-lar: 'Font Awesome 5 Pro' !default;
 $la-css-prefix-lar: far !default;
 
 $la-font-name-las: 'Font Awesome 5 Free' !default;
+$la-font-name-las-pro: 'Font Awesome 5 Pro' !default;
 $la-css-prefix-las: fas !default;
 
 $la-font-name-lab: 'Font Awesome 5 Brands' !default;
