Made light header color customizable

--- a/scss/theme/_variables.scss
+++ b/scss/theme/_variables.scss
@@ -18,6 +18,7 @@ $min-responsive-font-size: 16px;
 // Header
 $header-height-large: 4rem;
 $header-height-small: 2.3rem;
+$header-color: $light-color;
 $header-color-dark: #222;
 $header-text-light: $light-color;
 $header-text-dark: darken($dark-color, 15%);
