Added footer color variable

--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -14,7 +14,7 @@ body.sticky-footer {
   color: $gray-color;
   padding: 1rem $horiz-padding 1rem;
   text-align: center;
-  background-color: $bg-color;
+  background-color: $footer-color;
 
   .container {
     > *:last-child {
