Fix margins with content and breadcrumbs

--- a/templates/blocks/base.html.twig
+++ b/templates/blocks/base.html.twig
@@ -1,3 +1,5 @@
 {% block content_surround %}
-{% block content %}{% endblock %}
+  <div class="content-surround">
+    {% block content %}{% endblock %}
+  </div>
 {% endblock %}
