--- a/scss/theme/_breadcrumbs.scss
+++ b/scss/theme/_breadcrumbs.scss
@@ -1,6 +1,8 @@
 /** Breadcrumbs styling **/
 #breadcrumbs {
   padding-left: 0;
+  height: 2rem;
+  line-height: 2rem;
   display: flex;
   align-items: center;
   margin-top: -1rem;
