--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -5,6 +5,9 @@ html {
 // Header Overrides
 h1, h2, h3, h4, h5, h6 {
   margin-top: 2rem;
+  &:first-child {
+    margin-top: 1rem;
+  }
   font-family: $title-font-family;
   color: darken($body-font-color, 10%);
 }
