Separated font-face shims to completely disable v4 support

--- a/scss/font-awesome-line-awesome.scss
+++ b/scss/font-awesome-line-awesome.scss
@@ -10,3 +10,4 @@
 @import "font-awesome-line-awesome/stacked";
 @import "font-awesome-line-awesome/icons";
 @import "font-awesome-line-awesome/screen-reader";
+// @import "font-awesome-line-awesome/shims";
