--- a/scss/font-awesome-line-awesome/_variables.scss
+++ b/scss/font-awesome-line-awesome/_variables.scss
@@ -11,7 +11,7 @@ $la-li-width: (20em / 14) !default;
 }
 
 $la-font-name: 'FontAwesome' !default;
-$la-css-prefix: fa !default;
+$la-css-prefix: fa;
 
 $la-font-name-lar: 'Font Awesome 5 Pro' !default;
 $la-css-prefix-lar: far !default;
