--- a/scss/font-awesome-line-awesome/_path.scss
+++ b/scss/font-awesome-line-awesome/_path.scss
@@ -34,20 +34,6 @@
   font-weight: 400;
 }
 
-// FontAwesome 4 compatibility
-@font-face {
-  font-family: $la-font-name;
-  font-style: normal;
-  font-weight: 900;
-  font-display: auto;
-  src: url('#{$la-font-path}/la-solid-900.eot');
-  src: url("#{$la-font-path}/la-solid-900.eot?#iefix") format("embedded-opentype"),
-  url("#{$la-font-path}/la-solid-900.woff2") format("woff2"),
-  url("#{$la-font-path}/la-solid-900.woff") format("woff"),
-  url("#{$la-font-path}/la-solid-900.ttf") format("truetype"),
-  url("#{$la-font-path}/la-solid-900.svg#lineawesome") format("svg");
-}
-
 @font-face {
   font-family: $la-font-name-las;
   font-style: normal;
@@ -75,8 +61,7 @@
   url("#{$la-font-path}/la-solid-900.svg#lineawesome") format("svg");
 }
 
-// FontAwesome 4 compatibility
-.#{$la-css-prefix}, .#{$la-css-prefix-las} {
+.#{$la-css-prefix-las} {
   font-family: $la-font-name-las;
   font-weight: 900;
 }
