--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -28,7 +28,10 @@
     {# Add lineawesome 1.3.0 and font-awesome-line-awesome compatibility patches along with v4 shims #}
     {% if theme_var('line-awesome', true) %}{% do assets.addCss('theme://css-compiled/line-awesome'~compress) %}{% endif %}
     {% if theme_var('font-awesome', true) %}{% do assets.addCss('theme://css-compiled/font-awesome-line-awesome'~compress) %}{% endif %}
-    {% if theme_var('font-awesome-shim', true) %}{% do assets.addCss('theme://css/fontawesome/v4-shims'~compress) %}{% endif %}
+    {% if theme_var('font-awesome-shims', true) %}
+      {% do assets.addCss('theme://css/fontawesome/v4-shims'~compress) %}
+      {% do assets.addCss('theme://css-compiled/font-awesome-line-awesome-shims'~compress) %}
+    {% endif %}
 {% endblock %}
 
 {% block javascripts %}
