Updated all theme icons to font awesome 5 (using fas, not las)

--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -98,10 +98,8 @@ pre {
 }
 
 // Icon Tweaks
-i.fa {
-
-
-  &.fa-heart, &.fa-heart-o {
+i.far, i.fas {
+  &.fa-heart {
     &.pulse {
       color: #920
     }
@@ -177,5 +175,3 @@ ol {
     margin: 1rem 0;
   }
 }
-
-
