--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -63,7 +63,7 @@
                         </nav>
 
                         {% if config.plugins.login.enabled and grav.user.username %}
-                            <span class="login-status-wrapper"><i class="fa fa-user"></i> {% include 'partials/login-status.html.twig' %}</span>
+                            <span class="login-status-wrapper"><i class="fas fa-user"></i> {% include 'partials/login-status.html.twig' %}</span>
                         {% endif %}
 
                     </section>
