--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -24,7 +24,7 @@
 
         {# Use default footer #}
         {% else %}
-          <p><a href="http://getgrav.org">Grav</a> was <i class="fa fa-code"></i> with <i class="fa fa-heart-o pulse "></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
+          <p><a href="http://getgrav.org">Grav</a> was <i class="fas fa-code"></i> with <i class="far fa-heart pulse"></i> by <a href="https://trilby.media">Trilby Media</a>.</p>
         {% endif %}
       {% endif %}
     </section>
