--- a/templates/partials/sidebar.html.twig
+++ b/templates/partials/sidebar.html.twig
@@ -15,7 +15,7 @@
 {% if config.plugins.random.enabled %}
 <div class="sidebar-content">
 	<h4>{{ 'THEME_QUARK.SIDEBAR.RANDOM_ARTICLE.HEADLINE'|t }}</h4>
-	<a class="button" href="{{ base_url }}/random"><i class="fa fa-retweet"></i> {{ 'THEME_QUARK.SIDEBAR.RANDOM_ARTICLE.FEELING_LUCKY'|t }}</a>
+	<a class="button" href="{{ base_url }}/random"><i class="fas fa-retweet"></i> {{ 'THEME_QUARK.SIDEBAR.RANDOM_ARTICLE.FEELING_LUCKY'|t }}</a>
 </div>
 {% endif %}
 
@@ -36,8 +36,8 @@
 {% if config.plugins.feed.enabled %}
 <div class="sidebar-content syndicate">
     <h4>{{ 'THEME_QUARK.SIDEBAR.SYNDICATE.HEADLINE'|t }}</h4>
-    <a class="btn" href="{{ feed_url }}.atom"><i class="fa fa-rss-square"></i> Atom 1.0</a>
-    <a class="btn" href="{{ feed_url }}.rss"><i class="fa fa-rss-square"></i> RSS</a>
-    {% if config.plugins.feed.enable_json_feed %}<a class="btn" href="{{ feed_url }}.json"><i class="fa fa-rss-square"></i> JSON</a>{% endif %}
+    <a class="btn" href="{{ feed_url }}.atom"><i class="fas fa-rss-square"></i> Atom 1.0</a>
+    <a class="btn" href="{{ feed_url }}.rss"><i class="fas fa-rss-square"></i> RSS</a>
+    {% if config.plugins.feed.enable_json_feed %}<a class="btn" href="{{ feed_url }}.json"><i class="fas fa-rss-square"></i> JSON</a>{% endif %}
 </div>
 {% endif %}
