--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -26,7 +26,7 @@
     {% do assets.addCss('theme://css/custom.css') %}
 
     {# Add lineawesome 1.3.0 and font-awesome-line-awesome compatibility patches along with v4 shims #}
-    {% if theme_var('line-awesome', true) %}{% do assets.addCss('theme://css-compiled/line-awesome'~compress) %}{% endif %}
+    {% if theme_var('line-awesome', false) %}{% do assets.addCss('theme://css-compiled/line-awesome'~compress) %}{% endif %}
     {% if theme_var('font-awesome', true) %}{% do assets.addCss('theme://css-compiled/font-awesome-line-awesome'~compress) %}{% endif %}
     {% if theme_var('font-awesome-shims', true) %}
       {% do assets.addCss('theme://css/fontawesome/v4-shims'~compress) %}
