Improve accessibility (a bit)

--- a/templates/blocks/base.html.twig
+++ b/templates/blocks/base.html.twig
@@ -1,5 +1,5 @@
 {% block content_surround %}
-  <div class="content-surround">
+  <main role="main" role="main">
     {% block content %}{% endblock %}
-  </div>
+  </main>
 {% endblock %}
