--- a/templates/partials/layout.html.twig
+++ b/templates/partials/layout.html.twig
@@ -6,9 +6,8 @@
         {% block item %}{% endblock %}
     </div>
     {% if show_sidebar %}
-    <div id="sidebar" class="column {{ sidebar_col }}">
+    <aside id="sidebar" class="column {{ sidebar_col }}">
         {% block sidebar %}{% endblock %}
-    </div>
+    </aside>
     {% endif %}
 </div>
-
