--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -1,4 +1,4 @@
-<section id="footer" class="section">
+<footer id="footer" class="section" role="contentinfo">
     <section class="container {{ grid_size }}">
       {# Try to load a custom footer #}
       {% set footer_content = page.find('/modules/footer').content %}
@@ -28,4 +28,4 @@
         {% endif %}
       {% endif %}
     </section>
-</section>
+</footer>
