Removed additional character

--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -54,7 +54,7 @@
                     <header class="navbar-section logo" role="banner">
                         {% include 'partials/logo.html.twig' %}
                     </header>
-                    <nav class="navbar-section desktop-menu" role="navigation" aria-label="Main Navigation">>
+                    <nav class="navbar-section desktop-menu" role="navigation" aria-label="Main Navigation">
 
                         <div class="dropmenu animated">
                         {% block header_navigation %}
