Added option to sort footer by header variable

--- a/templates/partials/footer.html.twig
+++ b/templates/partials/footer.html.twig
@@ -9,7 +9,7 @@
         {# Try to load pages with the 'footer' frontmatter attribute set to true
            NOTE: pages.all does not work here, as pages is only the root page and not a page object:
            https://github.com/getgrav/grav/issues/3049 #}
-        {% set footer_pages = page.collection({'items': '@root.descendants'})|filter(x => x.header.footer == true) %}
+        {% set footer_pages = page.collection({'items': '@root.descendants', 'order': {'by': 'header.footer'}})|filter(x => x.header.footer == true) %}
         {% if footer_pages|length %}
           <ul class="footer-list">
             {% for p in footer_pages %}
