Fix duplicated role

--- a/templates/blocks/base.html.twig
+++ b/templates/blocks/base.html.twig
@@ -1,5 +1,5 @@
 {% block content_surround %}
-  <main role="main" role="main">
+  <main role="main">
     {% block content %}{% endblock %}
   </main>
 {% endblock %}
