Implement smooth scrolling using css, not javascript

--- a/templates/partials/hero.html.twig
+++ b/templates/partials/hero.html.twig
@@ -3,5 +3,7 @@
     <section class="container {{ grid_size }}" style="text-align: {{ page.header.hero_align|default('center') }}">
         {{ content|raw }}
     </section>
-    <i id="to-start" class="pulse fas fa-angle-down"></i>
+    <a href="#start" id="to-start">
+        <i class="pulse fas fa-angle-down"></i>
+    </a>
 </section>
