--- a/scss/theme/_framework.scss
+++ b/scss/theme/_framework.scss
@@ -1,5 +1,16 @@
 html {
   height: 100%;
+  scroll-behavior: smooth;
+}
+
+#start {
+  scroll-margin-top: $header-height-large;
+  scroll-snap-margin-top: $header-height-large; /* Safari and IOS */
+
+  .header-animated & {
+    scroll-margin-top: $header-height-small;
+    scroll-snap-margin-top: $header-height-small; /* Safari and IOS */
+  }
 }
 
 #body-wrapper {
@@ -117,6 +128,7 @@ section.section {
     bottom: 10px;
     font-size: 2rem;
     cursor: pointer;
+    color: inherit;
   }
 }
 
