Remove bricklayer dependency

--- a/templates/blog.html.twig
+++ b/templates/blog.html.twig
@@ -5,24 +5,13 @@
 {% set show_sidebar = theme_var('show_sidebar', true) %}
 {% set show_pagination = theme_var('show_pagination', true) %}
 
-{% block stylesheets %}
-    {% do assets.addCss('theme://css/bricklayer.css') %}
-    {{ parent() }}
-{% endblock %}
-
-{% block javascripts %}
-    {{ parent() }}
-    {% do assets.add('theme://js/bricklayer.min.js') %}
-    {% do assets.add('theme://js/scopedQuerySelectorShim.min.js') %}
-{% endblock %}
-
 {% block hero %}
     {% include 'partials/hero.html.twig' with {id: 'blog-hero', content: page.content, hero_image: blog_image} %}
 {% endblock %}
 
 {# We must override the body here in order to inject the additional class blog-listing #}
 {% block body %}
-    <section id="body-wrapper" class="section blog-listing">
+    <section id="body-wrapper" class="section">
         <section class="container {{ grid_size }}">
 
         {% block messages %}
@@ -39,20 +28,27 @@
 
         </section>
     </section>
-    <script>
-        //Bricklayer
-        var bricklayer = new Bricklayer(document.querySelector('.bricklayer'))
-    </script>
 {% endblock %}
 
 {% block content %}
     {% embed 'partials/layout.html.twig' with {blog: page} %}
         {% block item %}
 
-            <div class="bricklayer">
-            {% for child in collection %}
-                {% include 'partials/blog-list-item.html.twig' with {blog: page, page: child} %}
-            {% endfor %}
+            <div class="blog-listing columns">
+                <div class="column col-6 col-lg-12">
+                    {% for child in collection %}
+                        {% if loop.index0 % 2 == 0 %}
+                            {% include 'partials/blog-list-item.html.twig' with {blog: page, page: child} %}
+                        {% endif %}
+                    {% endfor %}
+                </div>
+                <div class="column col-6 col-lg-12">
+                    {% for child in collection %}
+                        {% if loop.index0 % 2 == 1 %}
+                            {% include 'partials/blog-list-item.html.twig' with {blog: page, page: child} %}
+                        {% endif %}
+                    {% endfor %}
+                </div>
             </div>
 
             {% if show_pagination and config.plugins.pagination.enabled and collection.params.pagination %}
