--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -10,11 +10,11 @@
 /** Blog Listing **/
 .blog-listing {
 
-  .bricklayer-column {
+  .column {
     padding-left: 0px;
     padding-right: 25px;
-
   }
+
   .card {
     margin-bottom: 25px;
     border: 0;
@@ -27,10 +27,6 @@
 
   .blog-date {
     font-size: 13px;
-  }
-
-  .label {
-
   }
 }
 
