--- a/scss/theme/_footer.scss
+++ b/scss/theme/_footer.scss
@@ -26,6 +26,7 @@ body.sticky-footer {
         display: flex;
         justify-content: center;
         list-style-type: none;
+        flex-wrap: wrap;
 
         > li {
           display: flex;
