Fix page left and right padding

--- a/scss/theme/_framework.scss
+++ b/scss/theme/_framework.scss
@@ -30,7 +30,7 @@ html {
   }
 }
 
-section.section {
+.section {
   padding-left: $horiz-padding;
   padding-right: $horiz-padding;
   position: relative;
