Fix scroll margins for all elements

--- a/scss/theme/_framework.scss
+++ b/scss/theme/_framework.scss
@@ -4,10 +4,12 @@ html {
 }
 
 #start {
-  scroll-margin-top: $header-height-large;
-  scroll-snap-margin-top: $header-height-large; /* Safari and IOS */
+  &, & * {
+    scroll-margin-top: $header-height-large;
+    scroll-snap-margin-top: $header-height-large; /* Safari and IOS */
+  }
 
-  .header-animated & {
+  .header-animated &, .header-animated & * {
     scroll-margin-top: $header-height-small;
     scroll-snap-margin-top: $header-height-small; /* Safari and IOS */
   }
