--- a/scss/theme/_typography.scss
+++ b/scss/theme/_typography.scss
@@ -5,7 +5,7 @@ html {
 // Header Overrides
 h1, h2, h3, h4, h5, h6 {
   margin-top: 2rem;
-  &:first-child {
+  #start &:first-child {
     margin-top: 1rem;
   }
   font-family: $title-font-family;
