--- a/templates/item.html.twig
+++ b/templates/item.html.twig
@@ -11,7 +11,7 @@
         {% set hero_image = page.media[hero_image_name] %}
         {% set content %}
             <h1>{{ page.title }}</h1>
-            <h2>{{ page.header.subtitle }}</h2>
+            {% if page.header.subtitle %}<h2>{{ page.header.subtitle }}</h2>{% endif %}
             {% include 'partials/blog/date.html.twig' %}
             {% include 'partials/blog/taxonomy.html.twig' %}
         {% endset %}
