--- a/scss/theme/_forms.scss
+++ b/scss/theme/_forms.scss
@@ -1,7 +1,7 @@
 form {
   .button-wrapper {
-    margin-top: 0.75rem;
-    margin-bottom: 1rem;
+    padding-top: 0.75rem;
+    padding-bottom: 1rem;
   }
 
   span.required {
