--- a/templates/modular/form.html.twig
+++ b/templates/modular/form.html.twig
@@ -1,6 +1,6 @@
 {% set grid_size = theme_var('grid-size') %}
 
-<section class="section modular-text {{ page.header.class}}">
+<section class="section modular-form {{ page.header.class}}">
     <section class="container {{ grid_size }}">
         <div class="columns {{ page.header.form_align|default('align-right') }}">
             {% if form %}
