Added option to vertically center hero image using hero-center class

--- a/scss/theme/_framework.scss
+++ b/scss/theme/_framework.scss
@@ -85,6 +85,10 @@ html {
 
   .header-fixed & {
     background-position: 50% 0;
+
+    &.hero-center {
+      background-position: 50% 50%;
+    }
   }
 
   //&.parallax {
