--- a/templates/modular/text.html.twig
+++ b/templates/modular/text.html.twig
@@ -1,5 +1,5 @@
 {% set grid_size = theme_var('grid-size') %}
-{% set image = page.media.images|first %}
+{% set image = (page.media.images|first).derivatives([480, 600, 840, 960, 1280, 240, 300, 420, 640]) %}
 
 <section class="section modular-text {{ page.header.class}}">
     <section class="container {{ grid_size }}">
@@ -9,7 +9,14 @@
                 {{ content|raw }}
             </div>
             <div class="column col-6 col-md-12">
-                {{ image.html|raw }}
+                {# NOTE: This assumes the default spectre grid breakpoints were not changed. #}
+                {% if grid_size == 'grid-xl' %}
+                  {{ image.sizes('(max-width: 840px) 100vw, (max-width: 1280px) 50vw, 640px').html|raw }}
+                {% elseif grid_size == 'grid-lg' %}
+                  {{ image.sizes('(max-width: 840px) 100vw, (max-width: 960px) 50vw, 480px').html|raw }}
+                {% else %}
+                  {{ image.html|raw }}
+                {% endif %}
             </div>
             {% else %}
             <div class="column col-12">
