--- a/templates/partials/base.html.twig
+++ b/templates/partials/base.html.twig
@@ -20,18 +20,18 @@
 {% endblock head %}
 
 {% block stylesheets %}
-    {% do assets.addCss('theme://css-compiled/spectre'~compress) %}
-    {% if theme_var('spectre.exp') %}{% do assets.addCss('theme://css-compiled/spectre-exp'~compress) %}{% endif %}
-    {% if theme_var('spectre.icons') %}{% do assets.addCss('theme://css-compiled/spectre-icons'~compress) %}{% endif %}
-    {% do assets.addCss('theme://css-compiled/theme'~compress) %}
-    {% do assets.addCss('theme://css/custom.css') %}
+    {% do assets.addCss('theme://css-compiled/spectre'~compress, {group:'theme'}) %}
+    {% if theme_var('spectre.exp') %}{% do assets.addCss('theme://css-compiled/spectre-exp'~compress, {group:'theme'}) %}{% endif %}
+    {% if theme_var('spectre.icons') %}{% do assets.addCss('theme://css-compiled/spectre-icons'~compress, {group:'theme'}) %}{% endif %}
+    {% do assets.addCss('theme://css-compiled/theme'~compress, {group:'theme'}) %}
+    {% do assets.addCss('theme://css/custom.css', {group:'theme'}) %}
 
     {# Add lineawesome 1.3.0 and font-awesome-line-awesome compatibility patches along with v4 shims #}
-    {% if theme_var('line-awesome', false) %}{% do assets.addCss('theme://css-compiled/line-awesome'~compress) %}{% endif %}
-    {% if theme_var('font-awesome', true) %}{% do assets.addCss('theme://css-compiled/font-awesome-line-awesome'~compress) %}{% endif %}
+    {% if theme_var('line-awesome', false) %}{% do assets.addCss('theme://css-compiled/line-awesome'~compress, {group:'theme'}) %}{% endif %}
+    {% if theme_var('font-awesome', true) %}{% do assets.addCss('theme://css-compiled/font-awesome-line-awesome'~compress, {group:'theme'}) %}{% endif %}
     {% if theme_var('font-awesome-shims', true) %}
-      {% do assets.addCss('theme://css/fontawesome/v4-shims'~compress) %}
-      {% do assets.addCss('theme://css-compiled/font-awesome-line-awesome-shims'~compress) %}
+      {% do assets.addCss('theme://css/fontawesome/v4-shims'~compress, {group:'theme'}) %}
+      {% do assets.addCss('theme://css-compiled/font-awesome-line-awesome-shims'~compress, {group:'theme'}) %}
     {% endif %}
 {% endblock %}
 
@@ -42,8 +42,13 @@
 {% endblock %}
 
 {% block assets deferred %}
+    {{ assets.css('theme')|raw }}
     {{ assets.css()|raw }}
     {{ assets.js()|raw }}
+
+    {# Preload webfonts #}
+    <link rel="preload" href="{{ url('theme://fonts/la-solid-900.woff2') }}" as="font" type="font/woff2" crossorigin>
+    <link rel="preload" href="{{ url('theme://fonts/la-regular-400.woff2') }}" as="font" type="font/woff2" crossorigin>
 {% endblock %}
 </head>
 <body id="top" class="{% block body_classes %}{{ body_classes }}{% endblock %}">
