Fix deprecated twig if inside for loop

--- a/templates/modular.html.twig
+++ b/templates/modular.html.twig
@@ -27,7 +27,7 @@
 {% block header_navigation %}
     {% if show_onpage_menu %}
         <ul class="navigation">
-        {% for module in page.collection() if module.header.visible is not same as(false) %}
+        {% for module in page.collection()|filter(x => x.header.visible is not same as(false)) %}
             {% set current_module = (module.active or module.activeChild) ? 'active' : '' %}
             <li><a class="{{ current_module }}" href="#{{ module.menu|hyphenize }}">{{ module.menu }}</a></li>
         {% endfor %}
@@ -38,14 +38,14 @@
 {% endblock %}
 
 {% block hero %}
-    {% for module in page.collection() if module.template == 'modular/hero' %}
+    {% for module in page.collection()|filter(x => x.template == 'modular/hero') %}
         <div id="{{ module.menu|hyphenize }}"></div>
         {{ module.content|raw }}
     {% endfor %}
 {% endblock %}
 
 {% block body %}
-    {% for module in page.collection() if module.template != 'modular/hero' %}
+    {% for module in page.collection()|filter(x => x.template != 'modular/hero') %}
         <div id="{{ module.menu|hyphenize }}"></div>
         {{ module.content|raw }}
     {% endfor %}
